--- a/.github/workflows/ubuntuChrome.yml
+++ b/.github/workflows/ubuntuChrome.yml
@@ -1,10 +1,12 @@
-name: main
+name: ubuntuChrome
 on: [push]
 jobs:
-  cypress-run:
+  chrome-on-ubuntu:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Cypress run
         uses: cypress-io/github-action@v2
+        with:
+          browser: chrome
