--- a/.github/workflows/ubuntuFirefox.yml
+++ b/.github/workflows/ubuntuFirefox.yml
@@ -7,7 +7,7 @@ jobs:
       image: cypress/browsers:node12.16.1-chrome80-ff73
       options: --user 1001
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v1
+      - uses: cypress-io/github-action@v2
         with:
-          browser: chrome
+          browser: firefox
