--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "npx eslint cypress/integration/*/*.js --fix",
     "pretest": "npm run lint",
-    "test": "npx cypress run",
+    "test": "npx cypress run --browser chrome",
     "open": "npx cypress open"
   },
   "eslintConfig": {
@@ -28,13 +28,11 @@
     "url": "https://github.com/johnmorrisQADeveloper/cypress_cucumber/issues"
   },
   "homepage": "https://github.com/johnmorrisQADeveloper/cypress_cucumber#readme",
-  "dependencies": {
-    "cypress-image-snapshot": "^3.1.1",
-    "cypress-visual-regression": "^1.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "cypress": "^4.9.0",
     "cypress-cucumber-preprocessor": "^2.5.2",
+    "cypress-image-snapshot": "^3.1.1",
     "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-cypress": "^2.11.1",
