--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cypress": "^4.9.0",
     "cypress-cucumber-preprocessor": "^2.5.2",
     "cypress-image-snapshot": "^3.1.1",
+    "cypress-slack-reporter": "^0.10.0",
     "eslint": "^7.4.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-cypress": "^2.11.1",
