--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,12 @@ jobs:
         uses: actions/checkout@v1
       - name: Cypress run
         uses: cypress-io/github-action@v2
-      - name: Slack Notification
-        uses: martinusso/action-slack-notify@v1.2.0
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_COLOR: '#3278BD'
-          SLACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_MESSAGE: 'Post Content :rocket:'
-          SLACK_TITLE: Post Title
-          SLACK_USERNAME: rtCamp
+#       - name: Slack Notification
+#         uses: martinusso/action-slack-notify@v1.2.0
+#         env:
+#           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+#           SLACK_COLOR: '#3278BD'
+#           SLACK_ICON: https://github.com/rtCamp.png?size=48
+#           SLACK_MESSAGE: 'Post Content :rocket:'
+#           SLACK_TITLE: Post Title
+#           SLACK_USERNAME: rtCamp
