added docker support for screenshot

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "url": "https://github.com/johnmorrisQADeveloper/cypress_cucumber/issues"
   },
   "homepage": "https://github.com/johnmorrisQADeveloper/cypress_cucumber#readme",
-  "dependencies": {},
+  "dependencies": {
+    "cypress": "^4.9.0"
+  },
   "devDependencies": {
     "cypress": "^4.9.0",
     "cypress-cucumber-preprocessor": "^2.5.2",
