add linting to all files

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "cypress/no-async-tests": "error"
     },
     "plugins": [
-        "cypress"
+        "cypress",
+        "cucumber"
     ]
 }
