--- a/.github/workflows/macChrome.yml
+++ b/.github/workflows/macChrome.yml
@@ -8,12 +8,8 @@ jobs:
       - uses: cypress-io/github-action@v2
         with:
           browser: chrome
-   slackNotification:
-    name: Slack Notification
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Slack Notification
-      uses: rtCamp/action-slack-notify@master
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}          
+
+      - name: Slack Notification
+      - uses: rtCamp/action-slack-notify@master
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}           
