--- a/.github/workflows/ubuntuChrome.yml
+++ b/.github/workflows/ubuntuChrome.yml
@@ -10,3 +10,13 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: chrome
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@master
+        env:
+          SLACK_CHANNEL: general
+          SLACK_COLOR: '#3278BD'
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
+          SLACK_MESSAGE: 'Post Content :rocket:'
+          SLACK_TITLE: Post Title
+          SLACK_USERNAME: rtCamp
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
