--- a/.github/workflows/ubuntuChrome.yml
+++ b/.github/workflows/ubuntuChrome.yml
@@ -3,6 +3,10 @@ on: [push]
 jobs:
   chrome-on-ubuntu:
     runs-on: ubuntu-latest
+    env:
+      REPOSITORY_URL: docker.pkg.github.com
+      IMAGE_NAME: ${{ github.repository }}/cypress_cucumber
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -10,13 +14,45 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: chrome
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@master
+      - uses: act10ns/slack@v1
+        with:
+          status: starting
+          channel: '#workflows'
+        if: always()
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Variables
+        id: vars
+        run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
+      - name: Build image
+        id: docker-build
+        run: >-
+          docker build
+          -t $IMAGE_NAME
+          -t $REPOSITORY_URL/$IMAGE_NAME:${{ steps.vars.outputs.SHORT_COMMIT_ID }}
+          -t $REPOSITORY_URL/$IMAGE_NAME:latest .
+      - name: Docker Login
         env:
-          SLACK_CHANNEL: general
-          SLACK_COLOR: '#3278BD'
-          SLACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_MESSAGE: 'Post Content :rocket:'
-          SLACK_TITLE: Post Title
-          SLACK_USERNAME: rtCamp
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        run: docker login $REPOSITORY_URL --username "$DOCKER_USERNAME" --password "$DOCKER_PASSWORD"
+      - name: Publish Image
+        id: docker-push
+        run: docker push $REPOSITORY_URL/$IMAGE_NAME
+
+      - uses: act10ns/slack@v1
+        with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#workflows'
+        if: always()  
+#       - name: Slack Notification
+#         uses: rtCamp/action-slack-notify@master
+#         env:
+#           SLACK_CHANNEL: general
+#           SLACK_COLOR: '#3278BD'
+#           SLACK_ICON: https://github.com/rtCamp.png?size=48
+#           SLACK_MESSAGE: 'Post Content :rocket:'
+#           SLACK_TITLE: Post Title
+#           SLACK_USERNAME: rtCamp
+#           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
