--- a/.github/workflows/ubuntuChrome.yml
+++ b/.github/workflows/ubuntuChrome.yml
@@ -14,21 +14,21 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: chrome
-      - uses: act10ns/slack@v1
-        with:
-          status: starting
-          channel: '#workflows'
-        if: always()
+#       - uses: act10ns/slack@v1
+#         with:
+#           status: starting
+#           channel: '#workflows'
+#         if: always()
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Variables
-        id: vars
+      - name: Cypress-End-2-End-Tests
+        id: Cypress-End-2-End-Tests
         run: echo "::set-output name=SHORT_COMMIT_ID::$(git rev-parse --short HEAD)"
       - uses: act10ns/slack@v1
         with:
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
-          channel: '#workflows'
+          channel: '#cypress'
         if: always()  
 #       - name: Slack Notification
 #         uses: rtCamp/action-slack-notify@master
