--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
         with:
           node-version: 12.x
       - name: Install dependecies
-        run: npm install
+        run: yarn install
       - name: Danger
-        run: npx danger ci
+        run: yarn danger ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
