--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: Install yarn
-        run: npm install -g yarn
       - name: yarn install
-        run: yarn install --frozen-lockfile
+        run: npm install 
       - name: Danger
-        run: yarn danger ci
+        run: npx danger ci
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
