--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "url": "https://github.com/johnmorrisQADeveloper/cypress_cucumber/issues"
   },
   "homepage": "https://github.com/johnmorrisQADeveloper/cypress_cucumber#readme",
-  "dependencies": {},
+  "dependencies": {
+    "danger": "^10.5.0"
+  },
   "devDependencies": {
     "cypress": "^4.12.1",
     "cypress-cucumber-preprocessor": "^2.5.5",
     "cypress-image-snapshot": "^3.1.1",
     "cypress-slack-reporter": "^0.10.0",
-    "danger": "^10.5.0",
     "eslint": "^7.12.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-cucumber": "^1.4.0",
