--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
           node-version: 12.x
       - name: npm install
         run: npm install 
+      - name: install dangerjs
+        run: npm install -g danger
       - name: Danger
         run: npx danger ci
         env:
