--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
         run: npm install 
       - name: install dangerjs
         run: npm install -g danger
+      - name: print present directory
+        run: pwd
       - name: Danger
         run: npx danger ci
         env:
