--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: install dangerjs
         run: npm install -g danger
       - name: print present directory
-        run: ls
+        run: cp . pwd
       - name: Danger
         run: npx danger ci
         env:
