changed again - debug 10000

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+      - name: Install dependecies
+        run: npm install
       - name: Danger
         run: npx danger ci
         env:
