--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Install dependecies
-        run: npm install
+      - name: Install dependecies and run tests
+        run: |
+          npm install 
+          npm ci
+        env:
+          CI: true     
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: npm install
+        run: npm install 
+      - name: install dangerjs
+        run: npm install -g danger
       - name: Danger
         run: npx danger ci
         env:
